Fix build and development setup
- Downgrade to TailwindCSS 3.x for stability
- Add proper ESLint configuration (eslint.config.js)
- Fix TypeScript and linting issues
- Add module type to package.json
- Update PostCSS configuration
- All builds and linting now working properly

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ai-chat-interface",
   "version": "1.0.0",
+  "type": "module",
   "description": "A ChatGPT-like interface with multi-API support and purple theme",
   "main": "index.js",
   "scripts": {
@@ -26,12 +27,12 @@
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.9.2",
     "vite": "^7.1.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.13",
+    "@eslint/js": "^9.35.0",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
     "eslint": "^9.35.0",
